modify popup.js and popup.hmtl

--- a/popup.html
+++ b/popup.html
@@ -11,7 +11,7 @@
         <p>Function: 渗透测试工具，自定义规则搜索指定资源的敏感信息。</p>
     </div>
     <div id="file_suffix">
-        <!--设置要搜索的文件后缀-->
+        <!--设置要搜索的文件后缀,需要支持多个后缀，默认后缀为 js(当然搜索范围还包括当前主页面)-->
     </div>
     <div id="rule_regexp">
         <!--用户设置需要匹配的信息的规则，如包含敏感词列表的路径 ip ajax请求-->
