--- a/popup.html
+++ b/popup.html
@@ -8,8 +8,7 @@
 </head>
 <body>
     <div id="project_info">
-        <p>Author: Conan0xff</p>
-        <p>Email: 1526840124@qq.com</p>
+        <p>Author: Conan0xff ImnoBady</p>
         <p>Function: chrome渗透测试插件，自定义规则搜索指定资源的敏感信息。</p>
     </div>
     <button type="button" id="add_suffix_button">add new suffix</button>
