adjust popup.html

--- a/popup.html
+++ b/popup.html
@@ -5,16 +5,22 @@
     <title>SensorInfoHunter</title>
 </head>
 <body>
-    <div id="show_domain">
-        <!--显示当前url-->
-        This is current url.
-    </div>
-    <div id="show_result">
-        <!--hunter后的结果显示部分-->
-        This is result.
-    </div>
-    <button type="submit" id="search_button">Search</button>
-    <script type="text/javascript" src="js/jquery-1.8.3.js"></script>
-    <script type="text/javascript" src="js/popup.js"></script>
+<div id="show_url">
+    <!--显示当前url-->
+    This is init url
+</div>
+<button type="button" id="get_url">get current url</button>
+
+
+<div id="show_result">
+    <!--hunter后的结果显示部分-->
+    This is result
+    <!--
+    文件名: 敏感信息(缩略内容) 位置(位于文件第几行)
+    -->
+</div>
+<button type="submit" id="search_button">Search</button>
+<script type="text/javascript" src="js/jquery-1.8.3.js"></script>
+<script type="text/javascript" src="js/popup.js"></script>
 </body>
 </html>
