--- a/options.html
+++ b/options.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>SensorInfoHunter</title>
+    <link rel="stylesheet" href="css/font-awesome.min.css">
 </head>
 <style type="text/css">
     .suffix{
@@ -24,7 +25,17 @@
     }
     a{
         text-decoration:none;
+        margin-left: 7px;
     }
+    .save_sucess{
+        color: red;
+        margin-left: 10px;
+        display: none;
+    }
+    /* .loading{
+        display: none;
+        margin-bottom: -4px;
+    } */
 </style>
 <body>
 <div id="project_info">
@@ -92,7 +103,7 @@
         </tr> -->
     </table>
 </div>
-<button type="submit" id="save_button">Save</button>
+<button type="submit" id="save_button">Save</button><!-- <i class="fa fa-spinner fa-spin fa-2x fa-fw loading"></i> --><span class='save_sucess'>保存成功</span>
 <script type="text/javascript" src="js/jquery-1.8.3.js"></script>
 <script type="text/javascript" src="js/options.js"></script>
 </body>
