--- a/options.html
+++ b/options.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>SensorInfoHunter</title>
     <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/button.css">
 </head>
 <style type="text/css">
     .suffix{
@@ -35,6 +36,12 @@
     /* .loading{
         display: none;
         margin-bottom: -4px;
+    } */
+    /* #save_button{
+        line-height: 20px;
+        height: 20px;
+        font-size: 15px;
+        width: 50%;
     } */
 </style>
 <body>
@@ -103,7 +110,7 @@
         </tr> -->
     </table>
 </div>
-<button type="submit" id="save_button">Save</button><!-- <i class="fa fa-spinner fa-spin fa-2x fa-fw loading"></i> --><span class='save_sucess'>保存成功</span>
+<button type="submit" id="save_button" class="button  button-rounded button-small">Save</button><!-- <i class="fa fa-spinner fa-spin fa-2x fa-fw loading"></i> --><span class='save_sucess'>保存成功</span>
 <script type="text/javascript" src="js/jquery-1.8.3.js"></script>
 <script type="text/javascript" src="js/options.js"></script>
 </body>
