--- a/popup.html
+++ b/popup.html
@@ -49,7 +49,8 @@
 	height: 20px;line-height:19px;text-align: center;
 	color: #fff;font-weight: bold;font-size: 11px;
 	border-radius: 2px;
-	background: -webkit-linear-gradient(top,#FFA340,#FF8400);
+	//background: -webkit-linear-gradient(top,#FFA340,#FF8400);
+	background: -webkit-linear-gradient(top,#2AC3F3,#00A0E3);
 	position: relative;
 	left:320px;//320;161
 }
@@ -181,6 +182,7 @@ label:hover{
 	</ul>
 </div>
 <script type="text/javascript" src="js/jquery-1.8.3.js"></script>
+<script type="text/javascript" src="js/background.js"></script>
 <script type="text/javascript" src="js/popup.js"></script>
 </body>
 </html>
