--- a/popup.html
+++ b/popup.html
@@ -107,78 +107,7 @@ label:hover{
 </div>
 <div id="show_result">
 	<ul class="result_box">
-		<li>
-			<label>xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxsadfds</label>
-		</li>
-		<li>
-			<label>yyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy</label>
-		</li>
-		<li>
-			<label>xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</label>
-		</li>
-		<li>
-			<label>yyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy</label>
-		</li>
-		<li>
-			<label>xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</label>
-		</li>
-		<li>
-			<label>yyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy</label>
-		</li>
-		<li>
-			<label>xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</label>
-		</li>
-		<li>
-			<label>yyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy</label>
-		</li>
-		<li>
-			<label>xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</label>
-		</li>
-		<li>
-			<label>yyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy</label>
-		</li>
-		<li>
-			<label>xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</label>
-		</li>
-		<li>
-			<label>yyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy</label>
-		</li>
-		<li>
-			<label>xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</label>
-		</li>
-		<li>
-			<label>yyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy</label>
-		</li>
-		<li>
-			<label>xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</label>
-		</li>
-		<li>
-			<label>yyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy</label>
-		</li>
-		<li>
-			<label>xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</label>
-		</li>
-		<li>
-			<label>yyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy</label>
-		</li>
-		<li>
-			<label>xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</label>
-		</li>
-		<li>
-			<label>yyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy</label>
-		</li>
-		<li>
-			<label>xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</label>
-		</li>
-		<li>
-			<label>yyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy</label>
-		</li>
-		<li>
-			<label>xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</label>
-		</li>
-		<li>
-			<label>yyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy</label>
-		</li>
+		please start search
 	</ul>
 </div>
 <script type="text/javascript" src="js/jquery-1.8.3.js"></script>
