--- a/popup.html
+++ b/popup.html
@@ -40,7 +40,7 @@
 	overflow-y: auto;
 	word-wrap: break-word;
 	max-height: 460px;
-	
+	 white-space:pre-wrap;
 }
 .top{
 	width: 430px;
@@ -134,7 +134,7 @@ label:hover{
 		please start search
 	</ul>
 </div>
-<div id="detail_result"  style="display: none">
+<div id="detail_result" style="display: none">
 asd
 </div>
 <script type="text/javascript" src="js/jquery-1.8.3.js"></script>
